public/css/index.css
html{ height: 100%; }

body{ height: 100%;
	font-family: "Roboto Condensed", sans-serif;
	min-width: 325px;
	overflow: hidden;
}

@font-face{
	font-family: "Ailerons-Typeface";
	src: url('../fonts/Ailerons-Typeface.otf'),
	url('../fonts/Ailerons-Typeface.otf');
}

#preloader {
	position:fixed;
	top:0;
	left:0;
	right:0;
	bottom:0;
	background-color:#fff; /* change if the mask should have another color then white */
	z-index:999; /* makes sure it stays on top */
}

#shownav {
	height: 20px;
}

#status {
	width:200px;
	height:200px;
	position:absolute;
	left:50%; /* centers the loading animation horizontally one the screen */
	top:50%; /* centers the loading animation vertically one the screen */
	background-image:url(https://raw.githubusercontent.com/niklausgerber/PreLoadMe/master/img/status.gif); /* path to your loading animation */
	background-repeat:no-repeat;
	background-position:center;
	margin:-100px 0 0 -100px; /* is width and height divided by two */
}

.fa { display:inline; }

.navbar-default{
	background-color: green	;
	opacity: 0.5;
	border-bottom-color: black;
	margin-bottom: 0px;
}

.navbar-fixed-top {
	top: 0;
	border-width: 0 0 0px;
	-webkit-box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.5);
	-moz-box-shadow:    0px 0px 10px 3px rgba(0, 0, 0, 0.5);
	box-shadow:         0px 0px 10px 3px rgba(0, 0, 0, 0.5);
}

.navbar-toggle{
	margin-top: 1.5em;
}

.navbar-toggle .top-bar {
	transform: rotate(45deg);
	transform-origin: 10% 10%;
}

.navbar-toggle .middle-bar {
	opacity: 0;
}
.navbar-toggle .bottom-bar {
	transform: rotate(-45deg);
	transform-origin: 10% 90%;
}
.navbar-toggle.collapsed .top-bar {
	transform: rotate(0);
}
.navbar-toggle.collapsed .middle-bar {
	opacity: 1;
}
.navbar-toggle.collapsed .bottom-bar {
	transform: rotate(0);
}

#nav_bar{
	min-width: 200px;
	-webkit-transition: opacity 0.3s ease-in-out;
	-moz-transition: opacity 0.3s ease-in-out;
	-ms-transition: opacity 0.3s ease-in-out;
	-o-transition: opacity 0.3s ease-in-out;
	transition: opacity 0.3s ease-in-out;
}

.navbar-brand:active {
	outline: none;
}


.is-hidden {
	opacity: 0;
}

.is-visible {
	opacity: 1;
}


@media (min-width: 768px){
	#bs-example-navbar-collapse-1.collapsing{
		transition: none;
		-webkit-transition:none;
		overflow: visible;
	}
}

.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
	color: #5C97BF;
	font-weight: bolder;
	background-color: transparent;
}

.navbar-nav {
	float: left;
	margin: 7.5px -15px;
}

.navbar-default .navbar-nav>li>a {
	font-family: 'Roboto Condensed', sans-serif;
	font-size: 1.5em;
	color: #000;
	margin-top: .50em;
}

.navbar-default .navbar-brand {
	color: #000;
	font-size: 3.5em;
	vertical-align: top;
	font-family: 'Roboto Condensed', sans-serif;
}

.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
	background-color: transparent;
}
.navbar-default .navbar-toggle {
	border-color: transparent;
}

#front{
	background-color: white;
	max-height: 99%;
	height: 99%;
	max-width: 100%;
	padding-top: 70px;
	overflow: hidden;
	background-image: -webkit-linear-gradient(0deg, black, hsla(0, 0%, 20%, .25) 20%, transparent), url(../images/MORGODTHEYEUNGOD.jpg);
	background-image: linear-gradient(0deg, black, hsla(0, 0%, 20%, .25) 20%, transparent), url(../images/MORGODTHEYEUNGOD.jpg);
	background-position: 0px 0px, 50% 50%;
	background-size: auto, cover;
	background-attachment: fixed;
	min-height: 200px;
	display: table;
	width: 100%;
}

#greeting{
	color: #02f90e;
	text-align: center;
	font-size: 5em;
	text-shadow: 1px 1px 1px #000;
	margin-top: auto;
	margin-bottom: bottom;
	display: table-cell;
	vertical-align: middle;
}


#downArrow{
	position: absolute;
	bottom: 10%;
	display: block;
	margin-left: auto;
	margin-right: auto;
	left: 0;
	right: 0;
	min-width: 40px;
	max-width: 100px;
	height: 70px;
}


.btn-circle {
	width: 70px;
	height: auto;
	margin-top: 15px;
	padding: 7px 16px;
	border: 2px solid #fff;
	border-radius: 100%!important;
	font-size: 40px;
	color: #fff;
	background: transparent;
	-webkit-animation: fade 4s infinite;
	animation: fade 4s infinite;
}

.btn-circle:hover,
.btn-circle:focus {
	color: black;
	text-decoration: none;
	background: white;
	-webkit-animation: 0;
	animation: 0;
	opacity: .7;
}


@-webkit-keyframes fade {
	0% {
		opacity: 1;
	}

	50% {
		opacity: .2;
	}

	100% {
		opacity: 1;
	}
}

@keyframes fade {
	0% {
		opacity: 1;
	}

	50% {
		opacity: .2;
	}

	100% {
		opacity: 1;
	}
}


#about{
	background-color: #00cc66;
	width: 100%;
}


#aboutInfo{
	width: 50%;
}

.aboutDivider{
	background-color: transparent;
	padding: 0.2em 1em 1em 1em;
	margin-bottom: 2em;
	margin-top: 2em;
	color: #616161;
}

#firstAbout{
}

@media (max-width: 768px) {
	.mobile-only {
		display:block !important;
	}

	.desktop-only {
		display:none !important;
	}
}

#circlePic{
	margin: 5em;
	width: 80%;
	height: auto;

}

.aboutResume{
	text-align: center;
	margin-bottom: 2em;
}

.aboutResume a{
	color: white;
}

#resumeButton{
	margin-left: auto;
	margin-right: auto;
	display: inline-block;
	text-align: center;
	background-color: #616161;
}

.important{
	font-size: 25px;
}


#projects{
	background-color: #00cc99;
}

.proj1{
	overflow: hidden;
	background-image: url(../images/BlastDesktop.png);
	background-repeat:no-repeat;
	background-position: 0px 0px, 50% 50%;
	background-size: 100%;
	min-height: 200px;
	width: 100%;
	color: white;
	height: 500px;
	position: relative;
	display: table-cell;
	vertical-align: middle;
	text-align: center;
}


#BlastLogo{
	width: 100%;
	height: auto;
	background-color: black;
	max-width: 50%;
	border: 2px solid white;
}

.proj2{
	overflow: hidden;
	background-image: url(../images/WiFinderMap.png);
	background-repeat:no-repeat;
	background-position: 0px 0px, 50% 50%;
	background-size: 100%;
	min-height: 200px;
	width: 100%;
	color: white;
	height: 500px;
	position: relative;
	display: table-cell;
	vertical-align: middle;
	text-align: center;
}

#Wifinder_Logo{
	width: auto;
	height: 35%;
	max-height: 100%;
	max-width: 100%;
	background-color: #ECECEC;
	border: 2px solid black;
}

.proj3{
	overflow: hidden;
	background-image: url(../images/GCTbgpic.jpg);
	background-repeat:no-repeat;
	background-position: 0px 0px, 50% 50%;
	background-size: 100%;
	min-height: 200px;
	width: 100%;
	color: white;
	height: 500px;
	display: table-cell;
	vertical-align: middle;
	text-align: center;
}

#GCT_Logo{
	width: auto;
	height: 35%;
	max-height: 100%;
	max-width: 100%;
	border: 2px solid black;
}

.projDesc{
	width: 50%;
	margin: 0 auto;
	text-align: justify;
	vertical-align: middle;
	background-color:
}

.button {
	position: relative;
	display: inline-block;
	display: inline;
	padding: 4px 12px;
	margin-bottom: 0;
	margin-left: .3em;
	line-height: 30px;
	color: #333333;
	text-align: center;
	vertical-align: middle;
	cursor: pointer;
	background-color: #fff;
	border: 1px solid #ccc;
	border-bottom-width: 2px;
	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.15);
	*zoom: 1;
}

#contact{
	width: 100%;
	background-image:url(../images/banner.jpg);
	background-size: cover; /* or contain depending on what you want */
	background-position: center center;
	background-repeat: no-repeat;
	text-align:center;
	margin:auto;
	padding:0;
	box-shadow: inset 0 0 0 1000px rgba(0,0,0,.5);
	background-attachment: fixed;
	display: flex;
	min-height: 245px;
/*	-webkit-box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.5);
	-moz-box-shadow:    0px 0px 10px 3px rgba(0, 0, 0, 0.5);
	box-shadow:         0px 0px 10px 3px rgba(0, 0, 0, 0.5);*/
}

.contact p{
	padding-left: 1em;
	margin: 0em;
	text-align: left;
	color: white;
	text-decoration: none;
}

.contact p:hover{
	color: #6D7993;
	text-decoration: none;
}

.contact a:hover{
	color: #6D7993;
	text-decoration: none;
}

@media (max-width: 1920px) {
	#front{
		background-attachment: scroll;
	}
	#contact{
		background-attachment: scroll;
	}
	.contact p{
		text-align: center;
	}
	#BlastLogo{
		max-height: 100%;
		max-width: 100%;
		height: auto;
	}
	#Wifinder_Logo{
		max-height: 90%;
		max-height: 90%;
	}
	#GCT_Logo{
		width: auto;
		height: auto;
	}
	.projDesc{
		width: 90%;
		text-align: left;
	}

	.proj1{
		background-color: gray;
		background-image: none;
	}

	.proj2{
		background-color: gray;
		background-image: none;
	}
	.proj3{
		background-color: gray;
		background-image: none;
	}

}

.container .contact{
	padding-top: 2em;
	padding-bottom: 2em;
	color: white;
}


.col-md-5 p{
	font-size: 1.5em;
}

.bottomBar{
	background-color: #282c37;
	height: 15%;
	position: relative;
	overflow: hidden;
	max-height: 150px;
	bottom: 0;
	width: 100%;
}

.containercr{
	position: relative;
	top: 50%;
	transform: translateY(-50%);
}

.copyright p{
	color: white;
	text-align: center;
}


.navbar-nav > li > a, .navbar-brand {
	padding-top:.50em !important;
	padding-bottom:10px !important;
	height: 40px;
	color: #6C7A89;

}
.navbar {min-height:5em !important;}

